# fp-openapi-rust-gen

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  openapi_v1.yml
.github/: CODEOWNERS
.github/workflows/: build.yml
.github/worksflows/: build.yml
src/: args.rs  client_config.rs  generator.rs  main.rs  models.rs  routes.rs  types.rs
