[package]
name = "openapi-hackday-gen"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
check_keyword = "0.2.0"
clap = { version = "3.2.15", features = ["derive"] }
convert_case = "0.5.0"
okapi = "0.4.0"
schemars = "0.7.6" # Matches what okapi uses
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.0"
