[package]
name = "openapi-hackday-gen"
version = "0.0.1"
edition = "2021"
authors = ["Fiberplane team <hello@fiberplane.com>"]
publish = false

[dependencies]
anyhow = "1.0.58"
cargo_toml = "0.11.5"
check_keyword = "0.2.0"
clap = { version = "3.2.15", features = ["derive"] }
convert_case = "0.5.0"
okapi = "0.4.0"
regex = "1.6.0"
schemars = "0.7.6" # Matches what okapi uses
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.0"
surf = "2.3.2"
toml = "0.5.9"
