[package]
name = "fp-openapi-rust-gen"
version = "0.0.1"
edition = "2021"
authors = ["Fiberplane team <hello@fiberplane.com>"]
publish = false

[dependencies]
anyhow = "1.0.66"
cargo_toml = "0.11.8"
check_keyword = "0.2.0"
clap = { version = "3.2.23", features = ["derive"] }
convert_case = "0.5.0" # Maybe replace with Inflector down the road
okapi = "0.7.0-rc.1"
regex = "1.7.0"
schemars = "0.8.11" # Matches what okapi uses
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
toml = "0.5.9"
